Convert code base to typescript

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Glysten",
-  "name": "Glysten WIP",
+  "short_name": "glysten",
+  "name": "Glysten",
   "icons": [
     {
       "src": "favicon.ico",
