--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "client",
+  "name": "glysten",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.13",
+    "@types/node": "12.0.7",
+    "@types/react": "16.8.19",
+    "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "spotify-web-api-js": "^1.2.0"
+    "react-scripts": "3.0.1",
+    "spotify-web-api-js": "^1.2.0",
+    "typescript": "3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,10 +22,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
